--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -53,43 +53,17 @@ if (direction === 'left') {
     <h2 class="font-black text-sm sm:text-md lg:text-xl mb-2">
       {post.data.title}
     </h2>
-    <p class={`font-extralight text-xs sm:text-sm lg:text-md`}>
+    <p class="font-extralight text-xs sm:text-sm lg:text-md">
       {post.data.description}
     </p>
     <div class="my-1">
       {
         post.data.categories.map((category: string) => (
-          <span
-            class={`pill inline-block text-${color}-100 bg-${color}-400 bg-opacity-[.16]`}
-          >
+          <span class="text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap inline-block text-primary-100 bg-primary-400/15">
             {category}
           </span>
         ))
       }
     </div>
-    <!-- {
-            type !== 'project' && (
-                <div class={`text-sm text-white/25`}>
-                    {post.data.date.toLocaleString('en-US', {
-                        day: 'numeric',
-                        month: 'long',
-                        year: 'numeric',
-                        timeZone: 'Europe/Amsterdam'
-                    })}
-                </div>
-            )
-        } -->
   </div>
 </a>
-
-<style>
-  p {
-    /* overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical; */
-  }
-  .pill {
-    @apply text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap;
-  }
-</style>
