--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from "@layouts/Layout.astro";
+import Layout from '@layouts/Layout.astro';
 ---
 
 <Layout>
@@ -44,15 +44,3 @@ import Layout from "@layouts/Layout.astro";
     </div>
   </div>
 </Layout>
-
-<style is:global>
-  article h2 {
-    @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
-  }
-  article p {
-    @apply mt-3 mb-4 text-primary-50;
-  }
-  article a {
-    @apply text-primary-500 underline hover:text-primary-300;
-  }
-</style>
