--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -1,10 +1,10 @@
 ---
-import { getSortedPostsByType } from "@lib/util";
-import Layout from "@layouts/Layout.astro";
-import { Image } from "astro:assets";
+import { getSortedPostsByType } from '@lib/util';
+import Layout from '@layouts/Layout.astro';
+import { Image } from 'astro:assets';
 
 export async function getStaticPaths() {
-  return (await getSortedPostsByType("post", "all")).map((post: any) => {
+  return (await getSortedPostsByType('post', 'all')).map((post: any) => {
     return {
       params: { slug: post.slug },
       props: { post },
@@ -57,9 +57,9 @@ const { Content } = await post.render();
                   loading="lazy"
                   width={1420}
                   class={
-                    post.data.type !== "photo"
-                      ? "h-32 sm:h-48 md:h-64 lg:h-96 object-cover object-middle"
-                      : ""
+                    post.data.type !== 'photo'
+                      ? 'h-32 sm:h-48 md:h-64 lg:h-96 object-cover object-middle'
+                      : ''
                   }
                 />
               </div>
@@ -73,18 +73,3 @@ const { Content } = await post.render();
     </div>
   </div>
 </Layout>
-
-<style is:global>
-  article h2 {
-    @apply mt-4 text-base font-bold text-primary-50 md:mt-6 md:text-xl;
-  }
-  article p {
-    @apply mt-3 mb-4 text-primary-50;
-  }
-  article a {
-    @apply text-primary-500 underline hover:text-primary-300;
-  }
-  article .astro-code {
-    @apply rounded-lg border border-secondary-700 p-2 text-xs shadow md:p-4 md:text-base;
-  }
-</style>
