--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -26,7 +26,7 @@ import Layout from '@layouts/Layout.astro';
         <div class="flex flex-col sm:w-2/3">
           <!-- Intro block //-->
           <div class="my-6">
-            <h1>Jeroen van Wissen</h1>
+            <h1 class="text-4xl text-quaternary-400">Jeroen van Wissen</h1>
             <h2 class="jobtitle">Senior Full Stack Developer</h2>
             <div class="description">
               <p>
