--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -15,25 +15,28 @@ export interface Props {
       };
     };
   };
-  color?: string;
   direction?: string;
   type?: string;
 }
 
-const { post, color = 'primary', direction, type = 'post' } = Astro.props;
+const { post, direction, type = 'post' } = Astro.props;
 
-// let border = `border border-${color}-600`;
 let border = '';
 if (direction === 'left') {
-  border = 'rounded-tl-xl rounded-br-xl'; //`cutoff-tl-br`; //` border border-r-${color}-400 border-t-${color}-400 border-b-${color}-800 border-l-${color}-800`;
+  border = 'rounded-tl-xl rounded-br-xl';
 } else if (direction === 'right') {
-  border = 'rounded-bl-xl rounded-tr-xl'; //`cutoff-bl-tr`; //` border border-l-${color}-400 border-t-${color}-400 border-b-${color}-800 border-r-${color}-800`;
+  border = 'rounded-bl-xl rounded-tr-xl';
+}
+
+let href = `/post/${post.slug}`;
+if (type === 'photo') {
+  href = `/photography#${post.slug}`;
 }
 ---
 
 <a
-  href={`/post/${post.slug}`}
-  class={`block text-white/80 hover:text-white bg-white/5 hover:bg-white/10 ${border}`}
+  href={href}
+  class={`block text-white/80 hover:text-white bg-white/5 hover:bg-white/10 ${border} overflow-hidden`}
 >
   {
     post.data.image && (
