--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -21,12 +21,12 @@ import Layout from '@layouts/Layout.astro';
     <link href={`${import.meta.env.SITE}/resume`} rel="canonical" />
   </Fragment>
   <div class="w-full">
-    <div class="mx-auto max-w-6xl px-8 py-4">
-      <div class="flex flex-col sm:flex-row">
-        <div class="flex flex-col sm:w-2/3">
+    <div class="mx-auto max-w-6xl px-6 py-4">
+      <article class="flex flex-col sm:flex-row">
+        <div class="flex flex-col sm:w-2/3 sm:pr-10">
           <!-- Intro block //-->
-          <div class="my-6">
-            <h1 class="text-4xl text-quaternary-400">Jeroen van Wissen</h1>
+          <div class="pb-3 border border-b-quaternary-800">
+            <h1>Jeroen van Wissen</h1>
             <h2 class="jobtitle">Senior Full Stack Developer</h2>
             <div class="description">
               <p>
@@ -353,7 +353,7 @@ import Layout from '@layouts/Layout.astro';
         <div class="flex flex-col sm:w-1/3">
           <div class="mt-6">
             <h2 class="text-tertiary-400">Languages</h2>
-            <div class="mb-2">
+            <div class="my-2">
               <span class="langpill">Dutch</span>
               <span class="langpill">French</span>
               <span class="langpill">English</span>
@@ -361,7 +361,7 @@ import Layout from '@layouts/Layout.astro';
           </div>
           <div class="my-3">
             <h2 class="text-primary-400">Skills</h2>
-            <div class="mb-2">
+            <div class="my-2">
               <span class="skillpill">Technical Leadership</span>
               <span class="skillpill">Team Management</span>
               <span class="skillpill">Coaching &amp; Mentoring</span>
@@ -386,49 +386,7 @@ import Layout from '@layouts/Layout.astro';
             </div>
           </div>
         </div>
-      </div>
+      </article>
     </div>
   </div>
-
-  <style>
-    h1 {
-      @apply text-4xl text-quaternary-400;
-    }
-
-    h2.company {
-      @apply text-2xl text-primary-400;
-    }
-
-    h2.jobtitle {
-      @apply text-xl text-primary-400;
-    }
-
-    span.date {
-      @apply text-sm text-tertiary-400/60;
-    }
-
-    div.description {
-      @apply text-md text-white;
-
-      p {
-        @apply py-2;
-      }
-
-      blockquote {
-        @apply text-md text-tertiary-400/60 border-l-2 border-primary-400/25 pl-2 italic;
-      }
-    }
-
-    .skillpill {
-      @apply inline-block text-primary-200 bg-primary-400/25 text-xs rounded-full px-3 py-1 mr-1 mb-1 whitespace-nowrap;
-    }
-
-    .langpill {
-      @apply inline-block text-tertiary-200 bg-tertiary-400/25 text-xs rounded-full px-3 py-1 mr-1 mb-1 whitespace-nowrap;
-    }
-
-    a {
-      @apply text-quaternary-400 underline;
-    }
-  </style>
 </Layout>
