--- a/src/pages/post/[slug].astro
+++ b/src/pages/post/[slug].astro
@@ -66,8 +66,8 @@ const { Content } = await post.render();
             )
           }
         </div>
-        <h2>{post.data.title}</h2>
-        <p>{post.data.description}</p>
+        <!-- <h2>{post.data.title}</h2> -->
+        <!-- <p>{post.data.description}</p> -->
         <Content />
       </article>
     </div>
