--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -36,36 +36,48 @@ if (type === 'photo') {
 
 <a
   href={href}
-  class={`block text-white/80 hover:text-white bg-white/5 hover:bg-white/10 ${border} overflow-hidden`}
+  class={`block text-white/80 hover:text-white bg-white/5 hover:bg-white/10 ${border} overflow-hidden relative cursor-pointer`}
 >
   {
     post.data.image && (
-      <Image
-        src={post.data.image.url}
-        alt={post.data.image.alt}
-        format="webp"
-        width={800}
-        height={400}
-        quality={50}
-        class=""
-        loading="lazy"
-      />
+      <div class="aspect-video">
+        <Image
+          src={post.data.image.url}
+          alt={post.data.image.alt}
+          format="webp"
+          width={800}
+          height={450}
+          quality={50}
+          class="w-full h-full object-cover"
+          loading="lazy"
+        />
+      </div>
     )
   }
-  <div class="p-2 sm:p-4">
-    <h2 class="font-black text-sm sm:text-md lg:text-xl mb-2">
-      {post.data.title}
-    </h2>
-    <p class="font-extralight text-xs sm:text-sm lg:text-md">
-      {post.data.description}
-    </p>
-    <div class="my-1">
+  <div
+    class={`${post.data.image ? 'absolute bottom-0 left-0 right-0' : 'p-2 sm:p-4'}`}
+  >
+    <div class={`${post.data.image ? 'bg-black/60 p-2 sm:p-4' : ''}`}>
+      <h2
+        class={`font-black ${post.data.type === 'photo' ? 'text-sm' : 'text-sm sm:text-md lg:text-lg'}`}
+      >
+        {post.data.title}
+      </h2>
+      <p class="font-extralight text-xs sm:text-sm lg:text-md">
+        {post.data.description}
+      </p>
       {
-        post.data.categories.map((category: string) => (
-          <span class="text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap inline-block text-primary-100 bg-primary-400/15">
-            {category}
-          </span>
-        ))
+        post.data.type === 'blog' && (
+          <div class="my-1">
+            {post.data.categories.map((category: string) => (
+              <span
+                class={`text-xs rounded-full px-3 py-1 mr-1 whitespace-nowrap inline-block text-primary-100 ${post.data.image ? 'bg-primary-950/50' : 'bg-primary-400/15'}`}
+              >
+                {category}
+              </span>
+            ))}
+          </div>
+        )
       }
     </div>
   </div>
