--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,24 +34,20 @@ const projects = (await getSortedPostsByType('post', 'project')).slice(0, 3);
     <link href={import.meta.env.SITE} rel="canonical" />
   </Fragment>
   <div class="w-full bg-primary-950 border-b border-primary-900">
-    <div class="max-w-6xl mx-auto px-2 pt-4 lg:px-20 lg:pt-8">
-      <div class="flex gap-4 lg:gap-8 lg:px-4">
+    <div class="max-w-6xl mx-auto px-4 md:px-8 lg:px-20">
+      <div class="flex items-center gap-4 lg:gap-12">
         <Image
           src="/images/jeroenvanwissen.png"
           alt="Jeroen van Wissen"
           width={400}
           height={400}
-          class="w-1/3"
+          class="w-1/3 pt-4 md:pt-8 lg:pt-12"
         />
-        <div class="w-2/3">
-          <div class="pt-6 sm:pt-20">
-            <p
-              class="text-sm sm:text-xl md:text-2xl xl:text-5xl font-bold text-left text-primary-400"
-            >
-              I’m <span class="text-primary-50">Jeroen</span>,<br />Full Stack
-              Developer<br />from the Netherlands
-            </p>
-          </div>
+        <div class="w-2/3 flex items-center">
+          <p class="text-base sm:text-xl md:text-4xl lg:text-6xl xl:text-9xl font-bold text-primary-400">
+            I'm <span class="text-primary-50">Jeroen</span>,<br />Full Stack
+            Developer<br />from the Netherlands
+          </p>
         </div>
       </div>
     </div>
@@ -60,9 +56,9 @@ const projects = (await getSortedPostsByType('post', 'project')).slice(0, 3);
     <div class="max-w-6xl mx-auto px-2 pb-6">
       <div class="leading-6">
         <h2
-          class="text-sm md:text-lg font-bold text-left text-quaternary-400 md:py-4"
+          class="text-sm md:text-xl font-bold text-left text-quaternary-400 md:py-4"
         >
-          <span class="leading-10 inline-block">.blog posts</span>
+          .blog posts
         </h2>
       </div>
       <div
@@ -80,9 +76,9 @@ const projects = (await getSortedPostsByType('post', 'project')).slice(0, 3);
     <div class="max-w-6xl mx-auto px-2 pb-6">
       <div class="leading-6">
         <h2
-          class="text-sm md:text-lg font-bold text-left text-tertiary-400 md:py-4"
+          class="text-sm md:text-xl font-bold text-left text-tertiary-400 md:py-4"
         >
-          <span class="leading-10 inline-block">.projects</span>
+         .projects
         </h2>
       </div>
       <div
@@ -100,9 +96,9 @@ const projects = (await getSortedPostsByType('post', 'project')).slice(0, 3);
     <div class="max-w-6xl mx-auto px-2 pb-6">
       <div class="leading-6">
         <h2
-          class="text-sm md:text-lg font-bold text-left text-secondary-400 md:py-4"
+          class="text-sm md:text-xl font-bold text-left text-secondary-400 md:py-4"
         >
-          <span class="leading-10 inline-block">.photography</span>
+          .photography
         </h2>
       </div>
       <div
