--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ const entries = await getAllSortedEntries();
         <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="hidden xl:object-cover xl:object-left xl:inline-block xl:h-[650px] xl:max-w-[650px] xl:absolute xl:right-0 xl:bottom-0 xl:rounded-none xl:rounded-br-lg" />
         <div class="flex flex-col justify-start items-start gap-3 xl:gap-5 px-4 pt-2.5 pb-5 relative xl:pr-0 xl:pl-5 xl:w-4/5">
             <div class="md:flex justify-center">
-                <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="mb-2 w-full max-w-[310px] h-52 md:h-[225px] mx-auto rounded object-cover object-top xl:hidden" />
+                <img alt="Image of Jeroen van Wissen" src="/images/jeroen.webp" class="mb-2 w-full max-w-[310px] h-52 md:h-[225px] mx-auto rounded-sm object-cover object-top xl:hidden" />
                 <p class="md:text-2xl lg:text-3xl xl:text-4xl md:ml-2 xl:ml-0 font-bold text-left text-primary-50">
                     Hey!<br />I’m <span class="text-primary-500">Jeroen</span>, a Full Stack JavaScript/TypeScript Developer from the Netherlands.</span>
                 </p>
