Latest updates to prepare for launch

--- a/src/components/PostBlock.astro
+++ b/src/components/PostBlock.astro
@@ -23,7 +23,7 @@ if (direction === 'left') {
 
 let href = `/post/${post.slug}`;
 if (type === 'photo') {
-  href = `/photography#${post.slug}`;
+  href = `http://31f-fotografie.nl/post/${post.slug}`;
 }
 if (type === 'project') {
   href = `/project/${post.slug}`;
