--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,7 +54,7 @@ import '@styles/global.css';
                 <menu>
                   <NavItem href="/" label="home" id="home-m" />
                   <NavItem
-                    href="/photography"
+                    href="https://31f-fotografie.nl"
                     label="photography"
                     id="photography-m"
                   />
@@ -70,7 +70,11 @@ import '@styles/global.css';
             class="hidden lg:flex justify-center list-reset w-full md:w-auto py-4 md:py-0 px-0 xl:px-4 text-md gap-2"
           >
             <NavItem href="/" label="home" id="home" />
-            <NavItem href="/photography" label="photography" id="photography" />
+            <NavItem
+              href="https://31f-fotografie.nl"
+              label="photography"
+              id="photography"
+            />
             <NavItem href="/posts" label="posts" id="posts" />
             <NavItem href="/projects" label="projects" id="projects" />
             <NavItem href="/resume" label="resume" id="resume" />
