Update basic info for new job

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -52,8 +52,29 @@ import Layout from '@layouts/Layout.astro';
 
           <!-- Employment History Block //-->
           <div class="py-3 border-b border-b-primary-800">
+            <h2 class="company">Team Rockstars IT</h2>
+            <span class="date">August 2025 - Present</span>
+            <div class="description">
+              <p></p>
+            </div>
+            <div class="pl-6 mt-4">
+              <h2 class="jobtitle">Software Engineer at Essent</h2>
+              <span class="date">August 2025 - Present</span>
+              <div class="description">
+                <p></p>
+                <div class="my-2">
+                  <span class="skillpill">Temporal.io</span>
+                  <span class="skillpill">Event Driven Architecture (EDA)</span>
+                  <span class="skillpill">JavaScript / TypeScript</span>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Employment History Block //-->
+          <div class="py-3 border-b border-b-primary-800">
             <h2 class="company">Sogeti, part of Capgemini</h2>
-            <span class="date">January 2024 - Present</span>
+            <span class="date">January 2024 - July 2025</span>
             <div class="description">
               <p>
                 While working on a project via Sogeti at the Dutch Ministry of
@@ -65,7 +86,7 @@ import Layout from '@layouts/Layout.astro';
               <h2 class="jobtitle">
                 Test Automation Engineer at Dutch Ministry of Foreign Affairs
               </h2>
-              <span class="date">January 2024 - Present</span>
+              <span class="date">January 2024 - July 2025</span>
               <div class="description">
                 <p>
                   As a member of one of the portal teams within this project, I
