--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -55,7 +55,7 @@ import Layout from '@layouts/Layout.astro';
             <h2 class="company">Team Rockstars IT</h2>
             <span class="date">August 2025 - Present</span>
             <div class="description">
-              <p></p>
+              <p>&nbsp;</p>
             </div>
             <div class="pl-6 mt-4">
               <h2 class="jobtitle">Software Engineer at Essent</h2>
