--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -61,7 +61,7 @@ import Layout from '@layouts/Layout.astro';
               <h2 class="jobtitle">Software Engineer at Essent</h2>
               <span class="date">August 2025 - Present</span>
               <div class="description">
-                <p></p>
+                <p>&nbsp;</p>
                 <div class="my-2">
                   <span class="skillpill">Temporal.io</span>
                   <span class="skillpill">Event Driven Architecture (EDA)</span>
